fixed page overflow

--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Questrial');
 @import url('https://fonts.googleapis.com/css?family=Barrio');
+@import url('https://fonts.googleapis.com/css?family=Patua+One|Prata');
+
 
 html, body{
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: 'Barrio', cursive;
+  font-family: 'Prata', cursive;
   font-size: 20px;
-  width: 100vw;
+  /*width: 100vw;*/
 }
 
 h2{
@@ -77,8 +79,8 @@ p{
 
 .backgroundOrange{
   background-color: #cc5500;
-  height: 100vh;
-  width: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
 
